--- a/food.html
+++ b/food.html
@@ -4,19 +4,36 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MENU — Daily All Day Pune</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 body{margin:0;font-family:Poppins,sans-serif;background:#0e0e0f;color:#fff}
 
-header{position:sticky;top:0;background:#0e0e0f;border-bottom:1px solid #222;padding:10px;text-align:center;font-weight:600;font-size:14px}
+header{
+ position:sticky;top:0;background:#0e0e0f;border-bottom:1px solid #222;
+ padding:10px;text-align:center;font-weight:600;font-size:14px
+}
 
-.topbar{position:sticky;top:40px;background:#0e0e0f;border-bottom:1px solid #1c1c1f;padding:6px}
+.topbar{
+ position:sticky;top:40px;background:#0e0e0f;
+ border-bottom:1px solid #1c1c1f;padding:6px
+}
 
-.search{width:100%;padding:6px 8px;border-radius:6px;border:none;background:#1c1c1f;color:#fff;font-size:12px;margin-bottom:6px}
+.search{
+ width:100%;padding:6px 8px;border-radius:6px;border:none;
+ background:#1c1c1f;color:#fff;font-size:12px;margin-bottom:6px
+}
 
-.filters{display:flex;gap:6px;overflow-x:auto}
-.filters button{background:#1c1c1f;border:none;color:#fff;padding:4px 8px;border-radius:6px;font-size:11px;cursor:pointer}
+.filters{
+ display:flex;gap:6px;overflow-x:auto
+}
+
+.filters button{
+ background:#1c1c1f;border:none;color:#fff;
+ padding:4px 8px;border-radius:6px;font-size:11px;cursor:pointer
+}
+
 .filters button.active{background:#ffb703;color:#000}
 
 .nav{
@@ -24,51 +41,87 @@ header{position:sticky;top:0;background:#0e0e0f;border-bottom:1px solid #222;pad
  overflow-x:auto;padding:8px;border-bottom:1px solid #1c1c1f;background:#0e0e0f;
  scroll-behavior:smooth
 }
+
 .nav a{color:#ffb703;text-decoration:none;font-size:12px;white-space:nowrap}
-.nav a.active{border-bottom:2px solid #ffb703}
 
 .section{padding:8px 12px}
 
 .category{
  color:#ffb703;border-left:2px solid #ffb703;
- padding-left:6px;margin:14px 0 8px;font-size:14px;
+ padding-left:6px;margin:12px 0 6px;font-size:14px;
  scroll-margin-top:130px;
 }
 
 .card{border-bottom:1px solid #1c1c1f}
 
-.item{display:flex;align-items:center;justify-content:space-between;padding:10px 2px;cursor:pointer}
-
-.left{display:flex;align-items:center;gap:10px}
-
-.imgWrap{position:relative}
-.img{width:44px;height:44px;border-radius:8px;object-fit:cover}
-
-.ribbon{
- position:absolute;top:-4px;left:-4px;
- background:#ffb703;color:#000;
- font-size:9px;font-weight:700;
- padding:2px 5px;border-radius:4px
+.item{
+ display:flex;align-items:center;justify-content:space-between;
+ padding:8px 2px;cursor:pointer
 }
 
-.icon{width:14px;height:14px}
+.left{display:flex;align-items:center;gap:8px}
 
 .name{font-size:13px}
 
 .price{color:#ffb703;font-weight:600;font-size:13px}
 
-.spice{font-size:11px;margin-left:4px;color:#ff4d4d}
+.icon{width:14px;height:14px}
+
+.img{
+ width:46px;height:46px;border-radius:6px;
+ object-fit:cover;position:relative
+}
+
+/* Bestseller ribbon */
+.ribbon{
+ position:absolute;
+ top:-4px;left:-4px;
+ background:#ffb703;color:#000;
+ font-size:9px;padding:2px 4px;
+ border-radius:4px
+}
+
+/* spice meter */
+.spiceMeter{
+ font-size:10px;margin-left:4px
+}
+
+.badge{
+ font-size:10px;padding:2px 4px;border-radius:4px;margin-left:3px;font-weight:600
+}
+.spicy{background:#ff4d4d;color:#fff}
+.best{background:#ffb703;color:#000}
 
 /* MODAL */
-#modal{display:none;position:fixed;inset:0;background:#000c;z-index:2000;align-items:center;justify-content:center}
-.modalBox{background:#0e0e0f;border-radius:12px;max-width:340px;width:92%;overflow:hidden}
-.modalBox img{width:100%;height:220px;object-fit:cover}
+#modal{
+ display:none;position:fixed;inset:0;background:#000c;
+ z-index:2000;align-items:center;justify-content:center
+}
+
+.modalBox{
+ background:#0e0e0f;border-radius:12px;
+ max-width:340px;width:92%;overflow:hidden
+}
+
+.modalBox img{
+ width:100%;height:220px;object-fit:cover
+}
+
 .modalContent{padding:12px}
+
 .modalName{font-weight:600;margin-bottom:4px}
+
 .modalType{font-size:12px;color:#9a9a9a}
+
 .modalPrice{color:#ffb703;font-weight:600;margin:6px 0}
+
 .modalDesc{font-size:12px;color:#ccc}
-.modalBtn{margin-top:12px;width:100%;padding:8px;border:none;border-radius:8px;background:#ffb703;color:#000;font-weight:600}
+
+.modalBtn{
+ margin-top:12px;width:100%;padding:8px;
+ border:none;border-radius:8px;
+ background:#ffb703;color:#000;font-weight:600
+}
 </style>
 </head>
 
@@ -114,11 +167,11 @@ function parseCSV(text){
  });
 }
 
-function spiceLevel(tag){
- if(tag.includes("spicy3")) return "🌶🌶🌶";
- if(tag.includes("spicy2")) return "🌶🌶";
- if(tag.includes("spicy1")) return "🌶";
- return "";
+function normalizeTags(tag){
+ return (tag||"")
+   .toLowerCase()
+   .replace(/\s/g,"")
+   .split("|");
 }
 
 function openModal(data){
@@ -133,18 +186,21 @@ function openModal(data){
  if(data.type==="nonveg") typeTxt="🔴 Non-Veg";
 
  let tagTxt="";
- if(data.tag.includes("bestseller")) tagTxt+=" ⭐";
- tagTxt+=" "+spiceLevel(data.tag);
+ if(data.tags.includes("spicy")) tagTxt+=" 🌶";
+ if(data.tags.includes("bestseller")) tagTxt+=" ⭐";
 
  document.getElementById("m_type").textContent=typeTxt+tagTxt;
 }
 
-function closeModal(){document.getElementById("modal").style.display="none";}
+function closeModal(){
+ document.getElementById("modal").style.display="none";
+}
 
 function render(rows){
  const menu=document.getElementById('menu');
  const nav=document.getElementById('nav');
- menu.innerHTML=""; nav.innerHTML="";
+ menu.innerHTML="";
+ nav.innerHTML="";
 
  rows.forEach(cols=>{
   const name=cols[0];
@@ -152,7 +208,7 @@ function render(rows){
   const desc=cols[2]||"";
   const type=(cols[3]||"").toLowerCase().replace(/[\s-]/g,"");
   const img=cols[4]||"";
-  const tag=(cols[5]||"").toLowerCase().replace(/\s/g,"");
+  const tags=normalizeTags(cols[5]);
 
   if(price===0){
    const id=name.replace(/[^a-z0-9]/gi,'_');
@@ -174,27 +230,31 @@ function render(rows){
 
    const item=document.createElement('div');
    item.className="item";
-   item.onclick=()=>openModal({name,price,desc,type,tag,img});
+
+   item.onclick=()=>openModal({
+     name,price,desc,type,img,tags
+   });
 
    const left=document.createElement('div');
    left.className="left";
 
    if(img){
     const wrap=document.createElement('div');
-    wrap.className="imgWrap";
+    wrap.style.position="relative";
 
     const im=document.createElement('img');
-    im.dataset.src="images/"+img;
-    im.className="img lazy";
+    im.src="images/"+img;
+    im.className="img";
+    im.loading="lazy";
+    wrap.appendChild(im);
 
-    if(tag.includes("bestseller")){
+    if(tags.includes("bestseller")){
       const rib=document.createElement('div');
       rib.className="ribbon";
-      rib.textContent="★";
+      rib.textContent="BEST";
       wrap.appendChild(rib);
     }
 
-    wrap.appendChild(im);
     left.appendChild(wrap);
    }
 
@@ -211,12 +271,11 @@ function render(rows){
    nm.className="name";
    nm.textContent=name;
 
-   const spice=spiceLevel(tag);
-   if(spice){
-     const s=document.createElement('span');
-     s.className="spice";
-     s.textContent=spice;
-     nm.appendChild(s);
+   if(tags.includes("spicy")){
+    const sp=document.createElement('span');
+    sp.className="spiceMeter";
+    sp.textContent="🌶🌶";
+    nm.appendChild(sp);
    }
 
    left.appendChild(nm);
@@ -231,23 +290,6 @@ function render(rows){
    menu.appendChild(card);
   }
  });
-
-lazyLoad();
-}
-
-function lazyLoad(){
- const imgs=document.querySelectorAll(".lazy");
- const obs=new IntersectionObserver(entries=>{
-   entries.forEach(e=>{
-     if(e.isIntersecting){
-       const img=e.target;
-       img.src=img.dataset.src;
-       img.classList.remove("lazy");
-       obs.unobserve(img);
-     }
-   });
- });
- imgs.forEach(i=>obs.observe(i));
 }
 
 function applyFilter(){
@@ -260,13 +302,12 @@ function applyFilter(){
 
   const name=r[0].toLowerCase();
   const type=(r[3]||"").toLowerCase().replace(/[\s-]/g,"");
-  const tag=(r[5]||"").toLowerCase().replace(/\s/g,"");
-  const tags=tag.split("|");
+  const tags=normalizeTags(r[5]);
 
   if(q && !name.includes(q)) return false;
   if(f==="veg" && type!=="veg") return false;
   if(f==="nonveg" && type!=="nonveg") return false;
-  if(f==="spicy" && !tag.includes("spicy")) return false;
+  if(f==="spicy" && !tags.includes("spicy")) return false;
   if(f==="best" && !tags.includes("bestseller")) return false;
 
   return true;
@@ -295,4 +336,3 @@ fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vTuqOGAiEQYlgwacbHKi_QRJe
 
 </body>
 </html>
-
