--- a/food.html
+++ b/food.html
@@ -142,21 +142,23 @@ header{
 <script>
 let ALL_ROWS=[];
 
-function clean(v){
+/* -------- CSV PARSER -------- */
+function parseCSV(text){
+ return text.trim().split("\n").slice(1).map(r=>{
+   const cols=r.match(/(".*?"|[^",]+)(?=\s*,|\s*$)/g) || [];
+   return cols.map(v=>v.replace(/^"|"$/g,"").trim());
+ });
+}
+
+/* -------- NORMALIZE -------- */
+function norm(v){
  return (v||"")
-   .toString()
    .toLowerCase()
    .replace(/\s+/g,"")
    .replace(/-/g,"");
 }
 
-function parseCSV(text){
- return text.trim().split("\n").slice(1).map(r=>{
-   const cols=r.match(/(".*?"|[^",]+)(?=\s*,|\s*$)/g);
-   return cols.map(v=>v.replace(/^"|"$/g,""));
- });
-}
-
+/* -------- MODAL -------- */
 function openModal(d){
  document.getElementById("modal").style.display="flex";
  document.getElementById("m_img").src="images/"+d.img;
@@ -164,11 +166,12 @@ function openModal(d){
  document.getElementById("m_price").textContent=d.price;
  document.getElementById("m_desc").textContent=d.desc;
 
+ const tags=d.tags;
  let t="";
  if(d.type==="veg") t="🟢 Veg";
  if(d.type==="nonveg") t="🔴 Non-Veg";
- if(d.tags.includes("spicy")) t+=" 🌶";
- if(d.tags.includes("bestseller")) t+=" ⭐";
+ if(tags.includes("spicy")) t+=" 🌶";
+ if(tags.includes("bestseller")) t+=" ⭐";
 
  document.getElementById("m_type").textContent=t;
 }
@@ -177,6 +180,7 @@ function closeModal(){
  document.getElementById("modal").style.display="none";
 }
 
+/* -------- RENDER -------- */
 function render(rows){
  const menu=document.getElementById("menu");
  const nav=document.getElementById("nav");
@@ -187,11 +191,14 @@ function render(rows){
   const name=cols[0];
   const price=parseFloat(cols[1]);
   const desc=cols[2]||"";
-  const type=clean(cols[3]);
+  const type=norm(cols[3]);
   const img=cols[4]||"";
-  const tagRaw=clean(cols[5]);
-  const tags=tagRaw?tagRaw.split("|"):[];
+  const tags=(cols[5]||"")
+      .toLowerCase()
+      .split("|")
+      .map(t=>norm(t));
 
+  /* CATEGORY */
   if(price===0){
    const id=name.replace(/[^a-z0-9]/gi,"_");
 
@@ -208,6 +215,7 @@ function render(rows){
    return;
   }
 
+  /* CARD */
   const card=document.createElement("div");
   card.className="card";
 
@@ -230,6 +238,7 @@ function render(rows){
    wrap.appendChild(im);
   }
 
+  /* BESTSELLER RIBBON */
   if(tags.includes("bestseller")){
    const r=document.createElement("div");
    r.className="ribbon";
@@ -239,11 +248,11 @@ function render(rows){
 
   left.appendChild(wrap);
 
-  /* VEG ICON */
+  /* VEG / NONVEG ICON */
   if(type==="veg"||type==="nonveg"){
    const ic=document.createElement("img");
    ic.className="icon";
-   ic.src= type==="veg"
+   ic.src = type==="veg"
     ? "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Veg_symbol.svg/32px-Veg_symbol.svg.png"
     : "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Non_veg_symbol.svg/32px-Non_veg_symbol.svg.png";
    left.appendChild(ic);
@@ -254,6 +263,7 @@ function render(rows){
   nm.className="name";
   nm.textContent=name;
 
+  /* SPICY */
   if(tags.includes("spicy")){
    const s=document.createElement("div");
    s.className="spice";
@@ -274,6 +284,7 @@ function render(rows){
  });
 }
 
+/* -------- FILTER -------- */
 function applyFilter(){
  const f=document.querySelector(".filters button.active").dataset.f;
  const q=document.getElementById("search").value.toLowerCase();
@@ -283,9 +294,11 @@ function applyFilter(){
   if(price===0) return true;
 
   const name=(r[0]||"").toLowerCase();
-  const type=clean(r[3]);
-  const tagRaw=clean(r[5]);
-  const tags=tagRaw?tagRaw.split("|"):[];
+  const type=norm(r[3]);
+  const tags=(r[5]||"")
+     .toLowerCase()
+     .split("|")
+     .map(t=>norm(t));
 
   if(q && !name.includes(q)) return false;
   if(f==="veg" && type!=="veg") return false;
@@ -299,6 +312,7 @@ function applyFilter(){
  render(filtered);
 }
 
+/* FILTER BUTTONS */
 document.querySelectorAll(".filters button").forEach(b=>{
  b.onclick=()=>{
   document.querySelectorAll(".filters button").forEach(x=>x.classList.remove("active"));
@@ -309,7 +323,7 @@ document.querySelectorAll(".filters button").forEach(b=>{
 
 document.getElementById("search").oninput=applyFilter;
 
-/* GOOGLE SHEET LIVE */
+/* GOOGLE SHEET */
 fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vTuqOGAiEQYlgwacbHKi_QRJeVRYGQqFl844FbKFZye0Dbyy2GdFN-LnpcWXqDKdDWLyGYKYA2JeI1n/pub?gid=1882359850&single=true&output=csv&t="+Date.now())
  .then(r=>r.text())
  .then(t=>{
@@ -317,7 +331,3 @@ fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vTuqOGAiEQYlgwacbHKi_QRJe
    render(ALL_ROWS);
  });
 </script>
-
-</body>
-</html>
-
